--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <title>Hello React</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
+    <style>
+
+    </style>
   </head>
   <body>
-    <div id="hello"></div>
-    <div id="world"></div>
+    <div id="app"></div>
     <script src="bundle.js"></script>
   </body>
 </html>
