--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Hello React</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
     <style>
-
+      body {
+        background: rgba(0,80,165,0.3);
+      }
     </style>
   </head>
   <body>
