--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello React</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
+    <title>Hi Claire</title>
+		<link href="https://fonts.googleapis.com/css?family=Comfortaa|Didact+Gothic|Merriweather:300|Raleway|Sahitya|Sorts+Mill+Goudy" rel="stylesheet">
     <style>
       body {
-        background: rgba(0,80,165,0.3);
+        background: #c1dad6;
       }
     </style>
   </head>
