added timer button and text field

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Hi Claire</title>
-		<link href="https://fonts.googleapis.com/css?family=Comfortaa|Didact+Gothic|Merriweather:300|Raleway|Sahitya|Sorts+Mill+Goudy" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <style>
       body {
         background: #c1dad6;
