--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hi Claire</title>
+    <title>React Scoreboard</title>
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <style>
       body {
